[package]
name = "cluster_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
probminhash = { version = "0.1.12" }
minimizer-iter = { version = "1.2.1" }
fxhash = { version = "0.2.1" }
needletail = { version = "0.6.3", features = ["compression"] }
log = { version = "0.4.27" }
simple_logger = { version = "5.0.0" }
anyhow = { version = "1.0.99" }
clap = { version = "4.5.46", features = ["derive"] }
